# media-to-doc

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PRD.md  README.md  ROADMAP.md  TDD.md  handoff-docs-api-re-export-2026-07-19.md  handoff-le-design-2026-07-18.md  handoff-le-wiring-2026-07-19.md  handoff-pipeline-w1-2026-07-18.md  handoff-pipeline-w10-llm-health-2026-07-19.md  handoff-pipeline-w10-real-LE-verify-2026-07-19.md  handoff-pipeline-w11-gatekeeper-2026-07-19.md  handoff-pipeline-w11-quality-2026-07-20.md  handoff-pipeline-w11-release-2026-07-20.md  handoff-pipeline-w12-c-patch-2026-07-20.md  handoff-pipeline-w12-d-multi-video-2026-07-21.md  handoff-pipeline-w12-e-fusion-2026-07-21.md  handoff-pipeline-w12-f-title-2026-07-21.md  handoff-pipeline-w12-github-release-2026-07-20.md  handoff-pipeline-w12-pypi-2026-07-20.md  handoff-pipeline-w13-01-fusion-2026-07-21.md  handoff-pipeline-w13-01-real-2026-07-21.md  handoff-pipeline-w13-02-longdoc-fix-2026-07-21.md  handoff-pipeline-w14b-plus-2-ui-features-2026-07-22.md  handoff-pipeline-w14b-plus-tauri-8cmds-2026-07-22.md  handoff-pipeline-w14b-tauri-bootstrap-2026-07-22.md  handoff-pipeline-w2-2026-07-18.md  handoff-pipeline-w3-2026-07-18.md  handoff-pipeline-w4-2026-07-18.md  handoff-pipeline-w5-smoke-2026-07-18.md  handoff-pipeline-w5-smoke-2026-07-19.md  handoff-pipeline-w6-cli-2026-07-19.md  handoff-pipeline-w7-mcp-2026-07-19.md  handoff-research-2026-07-17.md  handoff-skeleton-bootstrap-2026-07-18.md  handoff-template.md  handoff-w14c-complete-2026-07-22.md  (+6 more)
.github/workflows/: ci.yml
.learnings/: ERRORS.md  LEARNINGS.md
docs/: MCP_INTEGRATION.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.0.1.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.2.1.md  RELEASE_NOTES_v1.3.0.md  installation.md
docs/superpowers/plans/: 2026-07-22-w14d-release-and-trust-env.md
docs/superpowers/specs/: 2026-07-22-w14d-release-and-trust-env-design.md
examples/: cross_project_demo.py
scripts/: _w10a_check.py  _w10a_poll.py  _w10a_verify.py  _w11a_consistency.py  _w11c_run_longdoc.py  _w13a_poll.py  _w13a_poll_loop.py  _w13a_run_fusion.py  _w13a_watch_verify.py  _w13b_verify_longdoc_fix.py  _w13c_diag_fusion_ssl.py  _w14d_e2e_verify.py  run_smoke.py
src/media_to_doc/: __init__.py  cli.py  config.py  mcp_server.py  paths.py  state.py
src/media_to_doc/llm/: __init__.py  anthropic.py  base.py  health.py  ollama.py  openai_compat.py
src/media_to_doc/logger/: __init__.py  gatekeeper.py  learnings.py  pipeline_logger.py
src/media_to_doc/pipeline/: __init__.py  asr.py  asr_correct.py  audio.py  chapters.py  draft.py  frames.py  imagegen.py  longdoc.py  merge_lectures.py  ocr.py  render.py  runner.py  verify.py
src/media_to_doc/utils/: __init__.py  ffmpeg_utils.py  hash_utils.py  progress.py
tests/: __init__.py  conftest.py  test_cli.py  test_init.py  test_mcp_server.py  test_smoke.py
tests/test_llm/: test_anthropic.py  test_base.py  test_health.py  test_ollama.py  test_openai_compat.py
tests/test_logger/: test_gatekeeper.py  test_learnings.py  test_pipeline_logger.py
tests/test_pipeline/: __init__.py  test_asr.py  test_asr_correct.py  test_audio.py  test_chapters.py  test_draft.py  test_frames.py  test_imagegen.py  test_longdoc.py  test_longdoc_w12d_compat.py  test_merge_lectures.py  test_ocr.py  test_render.py  test_runner.py  test_verify.py
tests/test_utils/: __init__.py  test_ffmpeg_utils.py  test_hash_utils.py
workspace/inbox/: .gitkeep
workspace/work/: .gitkeep
